[package]
name = "librefang-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for LibreFang"
readme = "README.md"

[features]
# Channel crate defaults are intentionally empty: every workspace
# consumer (`librefang-api`, `librefang-cli`, `librefang-desktop`) sets
# `default-features = false` and forwards an explicit subset, so the old
# 25+ channel default just confused readers and risked drifting from
# `all-channels`. Pick a feature explicitly when depending on this
# crate. See #3655.
default = []

# Every channel adapter the crate ships. Kept in lock-step with the
# individual `channel-*` features below — adding a new adapter requires
# a matching entry here. CI / release / packaging pipelines opt in to
# this; everyday `cargo build` paths don't.
all-channels = [
    "channel-google-chat",
    "channel-webhook",
    "channel-whatsapp",
]

# Individual channel features
# email migrated to a sidecar (librefang.sidecar.adapters.email);
# see SIDECAR_CATALOG in librefang-api/src/routes/channels.rs.
channel-webhook = []
channel-whatsapp = []
# teams migrated to a sidecar (librefang.sidecar.adapters.teams);
# see SIDECAR_CATALOG in librefang-api/src/routes/channels.rs.
channel-google-chat = ["dep:rsa"]
# dingtalk migrated to a sidecar (librefang.sidecar.adapters.dingtalk);
# see SIDECAR_CATALOG in librefang-api/src/routes/channels.rs.
# wechat migrated to a sidecar (librefang.sidecar.adapters.wechat);
# see SIDECAR_CATALOG in librefang-api/src/routes/channels.rs.
# wecom migrated to a sidecar (librefang.sidecar.adapters.wecom);
# see SIDECAR_CATALOG in librefang-api/src/routes/channels.rs.

[dependencies]
librefang-types = { path = "../librefang-types" }
bitflags = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
html-escape = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pdf-extract = "0.10"
regex = { workspace = true }
regex-lite = { workspace = true }
smallvec = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
urlencoding = { workspace = true }

# Channel-specific optional dependencies
rsa = { workspace = true, optional = true }
aes = { version = "0.9", optional = true }
cbc = { version = "0.2", optional = true }
rustls = { workspace = true, features = ["ring"] }

# Email-sidecar migration (#…): the `lettre` / `imap` /
# `rustls-connector` / `rustls-pemfile` / `mailparse` optional deps
# the in-process channel-email feature used to gate are removed
# alongside the adapter — the sidecar runs on Python's stdlib
# `imaplib` + `smtplib` + `email` packages and pulls nothing of the
# sort into the Rust workspace.

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
tower = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
