[package]
name = "librefang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the LibreFang Agent OS"
readme = "README.md"

[features]
# Default = telemetry + a small "core-channels" set (discord / slack /
# webhook). Heavy / unmaintained adapters (matrix, email/imap,
# google-chat, …) stay opt-in via `--features all-channels`.
# Cuts cold `cargo build -p librefang-cli` time substantially and avoids
# dragging `matrix-sdk-crypto`, `lettre`, `imap`, `rsa`, … into every
# developer build. Release CI passes `--features all-channels` explicitly
# so published binaries still ship the full set. See #3688.
default = ["librefang-api/core-channels", "telemetry"]
# Note: `all-channels` does NOT imply `telemetry` — release CI builds with
# `--features all-channels` (without `--no-default-features`), so default's
# `telemetry` is still active. If you build with `--no-default-features
# --features all-channels`, add `telemetry` explicitly.
all-channels = ["librefang-api/all-channels"]
mini = ["librefang-api/mini"]
# Email migrated to a sidecar (librefang.sidecar.adapters.email); the
# Android `all-channels-no-email` workaround for rustls-connector's
# `Verifier::new_with_extra_roots` Android incompatibility is no
# longer needed because the IMAP/SMTP code path now runs out of
# process. `android` collapses to `all-channels`.
android = ["librefang-api/all-channels"]
telemetry = ["librefang-api/telemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[[bin]]
name = "librefang"
path = "src/main.rs"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel = { path = "../librefang-kernel" }
librefang-api = { path = "../librefang-api", default-features = false }
librefang-channels = { path = "../librefang-channels", default-features = false }
librefang-migrate = { path = "../librefang-migrate" }
librefang-skills = { path = "../librefang-skills" }
librefang-extensions = { path = "../librefang-extensions" }
librefang-memory = { path = "../librefang-memory" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-core = "0.1"
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = { workspace = true }
walkdir = { workspace = true }
base64 = { workspace = true }
librefang-runtime = { path = "../librefang-runtime" }
librefang-acp = { path = "../librefang-acp", features = ["kernel-adapter"] }
async-trait = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
libc = "0.2"
fluent = "0.17"
unic-langid = "0.9"
open = "5.3.5"
toml_edit = "0.25.8"
rustls = "0.23"
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
