[package]
name = "librefang-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop application for the LibreFang Agent OS (Tauri 2.0)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
librefang-kernel = { path = "../librefang-kernel" }
librefang-api = { path = "../librefang-api", default-features = false }
librefang-types = { path = "../librefang-types" }
librefang-extensions = { path = "../librefang-extensions" }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Shared: works on desktop and mobile.
# `tauri` appears again in the desktop target block below with extra features —
# Cargo merges features from both entries; mobile gets the base crate only.
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
toml = { workspace = true }
open = "5"

# macOS + Windows desktop: always include `tray-icon` — these platforms use
# native APIs (NSStatusItem / Shell_NotifyIconW), no GTK involved.
[target.'cfg(all(not(any(target_os = "ios", target_os = "android")), not(target_os = "linux")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"

# Linux desktop: same plugin set as macOS/Windows, but `tray-icon` is held
# back behind the `linux-tray` Cargo feature. Tauri 2.10's `tray-icon` on
# Linux hard-pulls `libappindicator-rs 0.9`, which transitively drags 8
# unmaintained GTK3 crates (RUSTSEC-2024-0411..0420) plus a `glib`
# unsoundness (RUSTSEC-2024-0429). Headless Linux server / CI builds
# don't need a system tray, so the default is OFF; opt in with
# `--features linux-tray` for distros where the tray is desired (and
# accept the audit advisories until tauri's `tray-icon 0.22+`/ksni
# migration ships). See #3667.
[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
# Mobile-only plugins
tauri-plugin-barcode-scanner = "2"
keyring = "3"

[features]
default = ["librefang-api/default"]
all-channels = ["librefang-api/all-channels"]
mini = ["librefang-api/mini"]
# Tauri uses custom-protocol in production builds
custom-protocol = ["tauri/custom-protocol"]
# Documents the mobile build path (no-op flag, mobile targets are cfg-gated)
mobile = []
# Linux-only opt-in: re-enables the system tray on Linux desktop builds at
# the cost of pulling the deprecated GTK3 stack (see #3667). On macOS /
# Windows the tray is always on (handled in the per-target dependency
# blocks above) and this feature is a no-op.
linux-tray = ["tauri/tray-icon"]
# Email migrated to a sidecar (librefang.sidecar.adapters.email); the
# Android-specific `mobile-no-email` flavor that worked around
# rustls-connector's missing `Verifier::new_with_extra_roots` impl is
# no longer needed because the IMAP/SMTP code path runs out of
# process. Feature collapses to `all-channels`.
mobile-no-email = ["librefang-api/all-channels"]

[[bin]]
name = "librefang-desktop"
path = "src/main.rs"

# iOS / Android need the crate exposed as a `staticlib` (linked into the
# native shell by Xcode / Gradle) and a `cdylib` (loaded by the Tauri
# mobile runtime). `lib` (rlib) is kept so the desktop binary in
# src/main.rs can still depend on the library normally. Without these
# extra crate-types, `cargo tauri ios build` fails with
#   "Library not found at .../liblibrefang_desktop.a"
#
# Side effect: desktop builds now also produce the `staticlib` and
# `cdylib` outputs. That adds a non-trivial link step (~10-20% extra
# build time on a clean target/) — worth it for a unified workspace,
# but if the desktop build ever feels slow this is one place to look.
# Cargo doesn't let us conditionalize crate-type on `cfg(mobile)` at
# the manifest layer, so we accept the cost.
[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[lints]
workspace = true
