[package]
name = "librefang-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extension & integration system for LibreFang — one-click MCP server setup, credential vault, OAuth2 PKCE"

[dependencies]
librefang-types = { path = "../librefang-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
axum = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
# aes-gcm 0.11 no longer re-exports OsRng from aes_gcm::aead; import directly.
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
argon2 = { workspace = true }

# OS keyring (libsecret / Keychain / Credential Manager). Target-gated so
# that musl-static and Android cross builds don't pull libdbus-sys (the
# secret-service backend's C-FFI), which has no usable backend on those
# targets and breaks the build looking for libdbus-1-dev. The vault
# transparently falls back to the AES-256-GCM file-based store when no
# OS keyring backend is compiled in (see vault.rs::os_keyring).
[target.'cfg(any(all(target_os = "linux", not(target_env = "musl")), target_os = "macos", target_os = "windows"))'.dependencies]
keyring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3"
librefang-runtime = { path = "../librefang-runtime" }

[lints]
workspace = true
