[workspace]

[package]
name = "librefang"
version = "2026.6.29"
edition = "2021"
description = "Official Rust client for LibreFang Agent OS"
license = "MIT"
repository = "https://github.com/librefang/librefang"
keywords = ["librefang", "agent", "ai"]
authors = ["LibreFang Team"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
futures = "0.3"
